#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.17.* UPDATES
--------------------------------------------------------------------------------
62: Pairwise comparisons added to the report
61: More chapter explanations added to the QC-R-Module
60: Minimum and Maximum fragment lengths added to the basic stats report part
59: Location information added for the most covered alignment loci
58: Location names added for the most covered alignment loci
57: Small additions to the alignments-R-module (language, explanations, etc)
56: Small additions to the Cluster and Reference-R-module (language, explanations, etc)
55: Small additions to the QC-R-module (language, explanations, etc)
54: Default paths adjusted
53: Function "getConfigField" reports now only field names a row starts with
52: Added the --cluster-cancel option to the start script
51: Changed the fasta-import function in the in-silico prediction, as it might generate errors for larger genomes
50: Prepared a stand-alone In-silico report script
49: Added the In-Silico section to the final report
48: Alignment stats are determined for the size selected in-silico prediction alignments
47: Alignment stats are determined for the full in-silico prediction alignments
46: Reads are now aligned agains the size selected in-silico prediction loci
45: Reads are now aligned agains the full in-silico prediction loci
44: More details on the welcoming screen
43: In situ predicted locations for ddRad digestion are now prepared and written to References/
42: Table design in Markdown adjusted
41: Cosmetics for finalReport, status messages printed into the final report were removed.
40: Plenty of scatterplots added to related metrics to sequencing depth
39: More exportable tables added
38: Harmonised the plot colours in the final report